[metadata]
name = auditlog
version = 2014.1
summary = VSCloud AuditLog
description = 
        Auditlog is a service to collect, query operations of users in tenants. It filters each request to the Openstack API services and stores them for user behavior audit.
author = Venusource
author-email = dev@venusource.com
home-page = http://www.venusource.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    auditlog

[entry_points]
auditlog.storage = 
    mongodb = auditlog.storage.impl_mongodb:MongoDBStorage
console_scripts =
    auditlog-api = auditlog.cli:api

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_rpm]
release = 1%{dist}
post-install = post-install.sh
requires = 
        python-iso8601 >= 0.1.9,
        python-keystoneclient >= 0.7.0,
        python-oslo-config >= 1.2.0,
        python-pecan >= 0.4.5,
        python-pymongo,
        python-pbr >= 0.6,
        python-pbr < 1.0,
        python-six >= 1.5.2,
        python-stevedore >= 0.14,
        python-wsme >= 0.6
doc-files = 
        AUTHORS,
        ChangeLog,
        etc/auditlog-api,
        etc/auditlog/auditlog.conf,
        etc/auditlog/policy.json,
        README.rst,
        doc/build/man/auditlog.1

